# rsomics-edger-camera

./: Cargo.toml  README.md
benches/: bench.rs
src/: camera.rs  cli.rs  ebayes.rs  fit.rs  lib.rs  matrix.rs  special.rs
tests/: camera_oracle.R  compat.rs  mkfixture.R
tests/golden/: camera.estimate.expected.tsv  camera.fixed.expected.tsv  deg_design.tsv  design.tsv  expr.tsv  mixed_expr.tsv  mixed_fixed.expected.tsv  mixed_sets.gmt  sets.gmt  zerovar_estimate.expected.tsv  zerovar_expr.tsv  zerovar_fixed.expected.tsv  zerovar_sets.gmt
