[package]
name = "rsomics-edger-camera"
version = "0.1.1"
description = "CAMERA competitive gene-set test accounting for inter-gene correlation (limma camera) — moderated-t z-scores, a variance-inflation factor from QR-rotated residual correlation, and a modified two-sample test per set; a clean-room Rust reimplementation of limma's camera"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-edger-camera"
path = "src/main.rs"

[lib]
name = "rsomics_edger_camera"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
ryu = "1"
itoa = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
